@@ -6,6 +6,7 @@ Sep 09 2002  2.5.2  Fixed longstanding minor bug in mac_addr, failed to zero
                     Changed channel color from white to dark grey in gpsmap
                     Fixed gpsmap default output name
                     Fixed gpsmap tracking
+                    Removed track opacity option due to imagemagick limitations
 Sep 08 2002  2.5.2  First iteration of gpsmap rewriting.  Command line args are
                      COMPLETELY changed.  Expect full functionality to return
                      soon.
